# mano.raje.sh

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  astro.config.mjs  docker-compose.yml  nginx.conf  package-lock.json  package.json  tailwind.config.js
backend/: Cargo.toml
backend/src/: db.rs  main.rs  routes.rs  utils.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  BallPool.tsx  index.tsx
frontend/src/components/: BallPool.tsx  MousePosition.tsx
public/: index.html
src/: App.tsx  index.css  index.tsx
src/components/: BackButton.astro  BallPool.tsx  Card.astro  ErrorPage.tsx  Identicon.astro  MousePosition.tsx  Posts.astro  PostsLine.astro
src/content/: config.ts
src/content/bp-posts/: Empathy - Harm or Help.md  Handling Conflict.md  Rank Trusted Authorites.md  Shades of Interpretation.md  The Good King and The Evil King.md  You and I and AI.md
src/content/posts/: Empathy - Harm or Help.md  You and I and AI.md
src/layouts/: BPDetailLayout.astro  DVDetailLayout.astro  Default.astro  HomeLayout.astro  Layout.astro  PostDetailLayout.astro
src/pages/: 404.astro  blog.astro  home.tsx  ideas.tsx  index.astro  index.mdx  now.tsx
src/pages/brain-pickings/: [...slug].astro  index.astro
src/pages/devlog/: index.astro
src/pages/posts/: Empathy - Harm or Help.md  Handling Conflict.md  Rank Trusted Authorites.md  Shades of Interpretation.md  The Good King and The Evil King.md  You and I and AI.md  (+2 more)
src/styles/: devlog.css  global.css  home.css  postpage.css
(+4 files in other folders)
